white color for letters

--- a/Untitled-2.css
+++ b/Untitled-2.css
@@ -6,6 +6,7 @@ body{
 
     margin: 0;
     padding: 0;
+    color: white;
 }
 
 
@@ -75,5 +76,4 @@ body{
     background-color:rgb(80, 80, 185);
     
 }
-
 
